# tigerstar

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: adapters.md  usage.md
example/: main.py
src/: __init__.py  engine.py
src/accounts/: __init__.py  model.py  service.py
src/core/: exceptions.py  identity.py  types.py
src/ledgers/: model.py  service.py
src/reporting/: service.py
src/storage/: __init__.py  base.py  firestore.py
src/storage/postgres/: 001_initial.sql  __init__.py  migrations.py  storage.py
src/transfers/: __init__.py  model.py  posting.py  service.py
tigerstar/: __init__.py  engine.py
tigerstar/accounts/: model.py  service.py
tigerstar/core/: __init__.py
tigerstar/ledgers/: __init__.py  model.py  service.py
tigerstar/reporting/: __init__.py  service.py
tigerstar/storage/: __init__.py  base.py  firestore.py
tigerstar/storage/postgres/: 001_initial.sql  migrations.py  storage.py
tigerstar/transfers/: model.py  posting.py  service.py
